--- a/readme.org
+++ b/readme.org
@@ -1,10 +1,11 @@
 #STARTUP: indent
 
 * Todo
+  - One gen_event for channels, one for ping etc...
   - Documentation!
   - Answer on ctcp ping.
   - What happends when the connection to a irc server is lost?
-  - Write tests.
+  - Write tests. Aka learn about eunit first :D
   - Implement dcc chat. If this chat can be encrypted and if there is
     a way to verify that code is safe then implement a feature to
     update the callback module code via dcc chat.
